--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
 
 h1 {
-  color: #f08080; /* Light red color */
+  color: #f08080; 
 }
 
 h2 {
-  color: #32cd32; /* Light green color */
+  color: #a578ad; 
 }
 
 h3 {
-  color: #428bca; /* Blue color */
+  color: #428bca; 
 }
